--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <h1> Asinah</h1>
+        <h1> Atungdiwe Asinah</h1>
     </header>
     
     <article>
@@ -17,7 +17,7 @@
         </p>
 
         <p> Apart from my studies i like animals especially dogs and i  have 6 dogs back home and the 6<sup>th</sup> is named after  my grandmother. i think the one thing i love most is football you guys call it soccer over here,and my favourite team is liverpool football club .<br> i live and breathe football and some people think i love it too much that it gets in the way of my social life. I also happen to be very knowledgable when it comes to general knowledge  and i like watching videos on philosophy and<em> christain history and theology</em>. I Belive everyday im trying to live according tomy Faith as a christain and Grow into the person God wants me to be  and Bring people closer God.<br>
-            Lastly i like Anime  i dont really watch it alot nowadays but my favorites are:<em> One piece, Bleach, Naruto,Vinland Saga and Attack on Titan<em> unpopular opinion JJK is overrated
+            Lastly i like Anime  i dont really watch it alot nowadays but my favorites are:<em> One piece, Bleach, Naruto,Vinland Saga and Attack on Titan</em> unpopular opinion JJK is overrated
 
         
         </p>
