--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -26,7 +26,7 @@
       <h2>About me</h2>
 
       <img
-        src="images/m in elevator.jpg"  alt=" a selfie of me in a green jersey"/>
+        src="html-assignment/m in elevator.jpg"  alt=" a selfie of me in a green jersey"/>
       <p>
         My name is Atungdiwe Asinah , i am 17 years old and i am from ghana i
         came to canada back in april and after spending 1 semester in computer
