--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>about me</title>
+    <link rel="stylesheet" href="style.css" />
     <style>
       img {
         width: 100px;
@@ -26,7 +27,10 @@
       <h2>About me</h2>
 
       <img
-        src="html-assignment/m in elevator.jpg"  alt=" a selfie of me in a green jersey"/>
+        id="my-image"
+        src="images/m in elevator.jpg"
+        alt=" a selfie of me in a green jersey"
+      />
       <p>
         My name is Atungdiwe Asinah , i am 17 years old and i am from ghana i
         came to canada back in april and after spending 1 semester in computer
@@ -83,3 +87,4 @@
     </footer>
   </body>
 </html>
+
