--- a/final-project/index.html
+++ b/final-project/index.html
@@ -123,8 +123,9 @@
     <section class="vision">
       <h2>Our Vision</h2>
       <p>
-        Creating innovative solutions to help businesses thrive in an
-        ever-evolving digital landscape.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit eos
+          quos nemo voluptatibus cumque quo, deserunt delectus consectetur
+          cupiditate in!
       </p>
       <button>Learn More</button>
     </section>
