--- a/final-project/index.html
+++ b/final-project/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Final-project/title>
+    <title>Final-project</title>
   </head>
   <body>
     <header class="main-header">
