--- a/final-project/index.html
+++ b/final-project/index.html
@@ -3,209 +3,290 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Final-project</title>
+    <title>The Star Media-Final Project</title>
+
+    <!-- Google -->
+  
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <header class="main-header">
-      <div class="logo">
-        <img src="images/logo.png" alt=" Logo" />
-      </div>
-      <nav class="navbar">
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#about">About Us</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#vision">Our Vision</a></li>
-          <li><a href="#team">Our Team</a></li>
-          <li><a href="#contact">Contact Us</a></li>
-        </ul>
-      </nav>
-
-      <!-- Search Bar -->
-      <div class="search-bar">
-        <input type="text" placeholder="Search" name="search" />
-        <button type="submit">Search</button>
+    <!-- Header Section -->
+    <header>
+      <div class="container">
+        <div class="logo-container">
+          <img class="logo" src="images/logo.png" alt="Three Star Media Logo" />
+        </div>
+        <nav class="nav">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#about">About Us</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#team">Team</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+        <form class="search-form">
+          <input type="text" placeholder="Search" />
+          
+        </form>
       </div>
     </header>
-
-    <!-- Hero Section -->
-    <section class="intro">
-      <img src="images/main-banner.jpg" alt="main banner" />
-      <h1>Welcome to Three Star Media</h1>
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam
-        obcaecati non reiciendis nostrum laboriosam, veritatis rem natus vero
-        nemo nobis magni ea voluptatum quasi necessitatibus omnis accusamus
-        consequatur eum facere?
-      </p>
-      <button>Connect with us</button>
-    </section>
-
-    <!-- About Us Section -->
-    <div class="aboutus">
-      <section class="about-us">
-        <img src="images/about-us.jpg" alt=" ping pong table" />
-        <h2>About Us</h2>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis
-          at sed rerum dicta adipisci, veniam minim a quisquam ipsum impedit
-          vero culpa perspiciatis sint aspernatur voluptas mollitia. Fuga autem
-          iusto labore!
-        </p>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut magni
-          eaque, officiis minus vel hic magnam explicabo dicta temporibus
-          dignissimos vero eveniet repellat possimus atque inventore ab.
-        </p>
+    <main>
+      <!-- intro Section -->
+      <section class="intro-section">
+        <div class="container">
+          <h1 class="intro-title">Welcome to Three Star Media</h1>
+          <p class="section-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.Magnam rerum
+            voluptas nesciunt quam nostrum similique nihil laboriosam provident
+            neque, recusandae voluptate temporibus! Animi accusamus id fuga
+            voluptatibus facilis risto consequuntur!
+          </p>
+          <a class="service-button" href="#">Connect with us &#x25B6;</a>
+        </div>
       </section>
-    </div>
 
-    <!-- Our Services Section -->
-    <section class="services">
-      <h2>Our Services</h2>
+      <!-- About Us Section -->
+      <section class="aboutus-section" id="about">
+        <div class="container">
+          <div class="about-image">
+            <img src="images/about-us.jpg" alt="About Us" />
+          </div>
+          <div class="div-text">
+            <h2 class="h2-title">About Us</h2>
+            <p class="section-text">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero
+              unde repellendus exercitationem asperiores ducimus placeat, maxime
+              soluta nesciunt pariatur aliquam consequuntur sequi saepe sint
+              praesentium laboriosam perferendis eius amet ad?
+            </p>
+            <p class="section-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.Animi,
+              velit ipsam? Atque accusamus,excepturi corrupti sunt reiciendis
+              soluta quo commodi quidem, non perferendis vel sed facilis rerum
+              cum in exercitationem?
+            </p>
+          </div>
+        </div>
+      </section>
 
-      <div class="Digital-Transformation">
-        <img src="images/digital.jpg" alt="  a phone and a laptop screen" />
-        <h3>Digital Transformation</h3>
+      <!-- Services Section -->
+      <section class="services-section" id="services">
+        <div class="container">
+          <h2 class="h2-title">Our Services</h2>
+          <ul class="services-list">
+            <li class="services-item service-two">
+              <img
+                src="images/digital.jpg"
+                alt="Digital"
+                class="services-item-image"
+              />
+              <div class="div-text">
+                <h3 class="h3-title">Digital Transformation</h3>
+                <p class="section-text">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius
+                  vel, rem inventore quo tempora animi mollitia eaque error qui
+                  consectetur in reprehenderit magnam at vitae corporis quaerat
+                  deleniti explicabo nisi?
+                </p>
+                <a class="service-button" href=" ">Digital Plans &#x25B6;</a>
+              </div>
+            </li>
+
+            <li class="services-item service-two">
+              <img
+                src="images/marketing.jpg"
+                alt="Marketing"
+                class="services-item-image"
+              />
+              <div class="div-text">
+                <h3 class="h3-title">Marketing</h3>
+                <p class="section-text">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius
+                  vel, rem inventore quo tempora animi mollitia eaque error qui
+                  consectetur in reprehenderit magnam at vitae corporis quaerat
+                  deleniti explicabo nisi?
+                </p>
+                <a class="service-button" href="#">Marketing Plans &#x25B6;</a>
+              </div>
+            </li>
+
+            <li class="services-item">
+              <img
+                src="images/video.jpg"
+                alt="Video Production"
+                class="services-item-image"
+              />
+              <div class="div-text">
+                <h3 class="h3-title">Video Production</h3>
+                <p class="section-text">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius
+                  vel, rem inventore quo tempora animi mollitia eaque error qui
+                  consectetur in reprehenderit magnam at vitae corporis quaerat
+                  deleniti explicabo nisi?
+                </p>
+                <a class="service-button" href="#">Video Plans &#x25B6;</a>
+              </div>
+            </li>
+
+            <li class="services-item">
+              <img
+                src="images/web.jpg"
+                alt="Web Development"
+                class="services-item-image"
+              />
+              <div class="div-text">
+                <h3 class="h3-title">Web Development</h3>
+                <p class="section-text">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius
+                  vel, rem inventore quo tempora animi mollitia eaque error qui
+                  consectetur in reprehenderit magnam at vitae corporis quaerat
+                  deleniti explicabo nisi?
+                </p>
+                <a class="service-button" href="#">Web Plans &#x25B6;</a>
+              </div>
+            </li>
+
+            <li class="services-item">
+              <img
+                src="images/print.jpg"
+                alt="Print Services"
+                class="services-item-image"
+              />
+              <div class="div-text">
+                <h3 class="h3-title">Print</h3>
+                <p class="section-text">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius
+                  vel, rem inventore quo tempora animi mollitia eaque error qui
+                  consectetur in reprehenderit magnam at vitae corporis quaerat
+                  deleniti explicabo nisi?
+                </p>
+                <a class="service-button" href="#">Print Plans &#x25B6;</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- Vision Section -->
+      <section class="vision-section">
+        <div class="container">
+          <h2 class="h3-title">Our Vision</h2>
+          <p class="section-text">
+            Lorem ipsum dolor sit, amet consectetur adpisicing elit. Ex
+            voluptatem delenitl lure, sit ccusantium rerum est commodi veniam
+            tempora perspicratis nobis officiis fugiat eaque. Veritatis
+            exercitationem delectus ex ab laudantium.
+          </p>
+          <a class="service-button" href="#">Learn More &#x25B6;</a>
+        </div>
+      </section>
+
+      <!-- Team Section -->
+      <section class="team-section">
+        <div class="container">
+          <h2 class="h2-title">Our Team</h2>
+          <div class="teamgrid">
+            <div class="team-box photo">
+              <img src="images/john.jpg" alt="John Doe" />
+            </div>
+            <div class="team text">
+              <h3 class="member-name">John Doe</h3>
+              <h4 class="team-position">CEO and Co-owner</h4>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet,
+                aspernatur ratione sed cum ad officiis sint cumque fugiat
+                similique. Earum laudantium deleniti possimus? Voluptatem
+                architecto repellendus harum sit voluptatum tempora.
+              </p>
+            </div>
+            <div class="team text">
+              <h3 class="member-name">Bob Rite</h3>
+              <h4 class="team-position">CFO and Co-owner</h4>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet,
+                aspernatur ratione sed cum ad officiis sint cumque fugiat
+                similique. Earum laudantium deleniti possimus? Voluptatem
+                architecto repellendus harum sit voluptatum tempora.
+              </p>
+            </div>
+            <div class="team-box photo">
+              <img src="./images/bob.jpg" alt="Bob Rite" />
+            </div>
+          </div>
+        </div>
+      </section>
+
+
+
+
+
+
+<!--contact form section-->
+      <section class="contact">
+        <h1 class="contact-title">Contact Us</h1>
+        <h2 class="contact">Send us a message</h2>
+        <form action="index.hmtl" method="post" class="contact">
+          <label for="name">Full Name</label>
+          <input type="text" id="name" name="name" placeholder="Soleil Clarke" />
+  
+          <label for="email"> Email</label>
+          <input
+            type="email"
+            id="email"
+            name="email"
+            placeholder="Soleilimani14@gmail.com"
+          />
+  
+          <label for="message">Your Message</label>
+          <textarea id="message"></textarea>
+  
+          <button type="submit" class="submit-button">SEND</button>
+        </form>
+      </section>
+      
+            </li>
+            <li class="hours of operation">
+              <h3 class="h3-title">Hours of Operation</h3>
+              <table class="hours-table">
+                <tr>
+                  <th>Days</th>
+                  <th>Hours</th>
+                </tr>
+                <tr>
+                  <td>Monday - Friday</td>
+                  <td>9 AM - 6 PM</td>
+                </tr>
+                <tr>
+                  <td>Saturday - Sunday</td>
+                  <td>Closed</td>
+                </tr>
+              </table>
+            </li>
+            <li class="google maps">
+              <h3 class="h3-title">Location</h3>
+              <iframe
+                class="map"
+                src="https://www.google.com/maps/embed/v1/place?q=Algonquin+College,+Woodroffe+Avenue,+Ottawa,+ON,+Canada&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8&language=en"
+              ></iframe>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+    <!-- Footer Section -->
+    <footer>
+      <div class="container">
+        <p>&copy; Copyright Three Star Media, 2020</p>
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt vitae
-          consequuntur officiis. Dignissimos modi assumenda esse. Numquam
-          maiores nihil modi!
-        </p>
-        <button>Digital Plans</button>
-      </div>
-
-      <div class="Marketing">
-        <img src="images/marketing.jpg" alt=" pc with a stocks website open" />
-        <h3>Marketing</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem cum
-          magnam nam nulla tempore accusantium unde amet illo necessitatibus
-          culpa..
-        </p>
-        <button>Marketing Plans</button>
-      </div>
-
-      <div class=">Video Production">
-        <img src="images/video.jpg" alt="phone with youtube icon" />
-        <h3>Video Production</h3>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam iste
-          repellendus iusto voluptatibus adipisci soluta dolores repudiandae
-          architecto, quidem tenetur!
-        </p>
-        <button>Video Plans</button>
-      </div>
-
-      <div class="Web Development">
-        <img src="images/web.jpg" alt=" phone on a sheet of paper with a pen" />
-        <h3>Web Development</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi quod
-          ratione facilis sapiente tempora rem?.
-        </p>
-        <button>Web plans</button>
-      </div>
-
-      <div class="Print">
-        <img src="images/print.jpg" alt=" mailboxes" />
-        <h3>Print</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit eos
-          quos nemo voluptatibus cumque quo, deserunt delectus consectetur
-          cupiditate in!
-        </p>
-        <button>Print Plans</button>
-      </div>
-    </section>
-
-    <!-- Vision Section -->
-    <section class="vision">
-      <h2>Our Vision</h2>
-      <p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit eos
-          quos nemo voluptatibus cumque quo, deserunt delectus consectetur
-          cupiditate in!
-      </p>
-      <button>Learn More</button>
-    </section>
-
-    <!-- Our Team Section -->
-    <section class="our-team">
-      <h2>Our Team</h2>
-      <div class="john">
-        <img src="images/john.jpg" alt="John Doe" />
-        <h3>John Doe</h3>
-        <h4>Founder & CEO</h4>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
-          aspernatur similique accusamus velit culpa fugiat in a provident
-          doloremque eum.
+          All images are taken from <a href="https://unsplash.com">Unsplash</a>
         </p>
       </div>
-      <div>
-        <img src="images/bob.jpg" alt="Bob Rite" />
-        <h3>Bob Rite</h3>
-        <h4>Marketing Director</h4>
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima ullam
-          magni animi aperiam quasi tenetur ab alias libero doloremque nisi?
-        </p>
-      </div>
-    </section>
-
-    <!-- Contact section -->
-    <section class="contact">
-      <h1 class="contact-title">Contact Us</h1>
-      <h2 class="contact">Send us a message</h2>
-      <form action="index.hmtl" method="post">
-        <label for="name">Full Name</label>
-        <input type="text" id="name" name="name" placeholder="Soleil Clarke" />
-
-        <label for="email"> Email</label>
-        <input
-          type="email"
-          id="email"
-          name="email"
-          placeholder="Soleilimani14@gmail.com"
-        />
-
-        <label for="message">Your Message</label>
-        <textarea id="message"></textarea>
-
-        <button type="submit" class="submit-button">SEND</button>
-      </form>
-    </section>
-
-    <!-- Hours of Operation & Location Section -->
-    <section id="location" class="location">
-      <h2>Hours of Operation</h2>
-      <table>
-        <thead>
-          <tr>
-            <th>Days</th>
-            <th>Hours</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Monday - Friday</td>
-            <td>9 AM - 6 PM</td>
-          </tr>
-          <tr>
-            <td>Saturday - Sunday</td>
-            <td>Closed</td>
-          </tr>
-        </tbody>
-      </table>
-
-      <h2>Location</h2>
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2885.1027810327357!2d-75.76028282381706!3d45.349558971823866!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce05b0df3f0e7b%3A0x5071bfcda0c65b32!2sAlgonquin%20College!5e0!3m2!1sen!2sca!4v1614052677761!5m2!1sen!2sca"
-        width="600"
-        height="450"
-      >
-      </iframe>
-    </section>
+    </footer>
   </body>
 </html>
